# soci_issue_762

./: .editorconfig  CMakeLists.txt  README.md
soci_issue_762/: CMakeLists.txt  main.cpp
